feat: entity, repo, service, dto and controller classes and tests